dom/base/test/jsmodules/importmaps/good/module_7.mjs
success("good/module_7.mjs");
