dom/base/test/jsmodules/importmaps/bad/module_7.mjs
throw "Shouldn't load file bad/module_7.mjs";
